include_directories(${PROJECT_SOURCE_DIR}/inc/common)
include_directories(${PROJECT_SOURCE_DIR}/inc/common/user_msg)
include_directories(${PROJECT_SOURCE_DIR}/inc/config)
include_directories(${PROJECT_SOURCE_DIR}/inc/daemon)
include_directories(${PROJECT_SOURCE_DIR}/inc/events)
include_directories(${PROJECT_SOURCE_DIR}/inc/logs)
include_directories(${PROJECT_SOURCE_DIR}/inc/modem_conf)
include_directories(${PROJECT_SOURCE_DIR}/inc/network_api)
include_directories(${PROJECT_SOURCE_DIR}/inc/network_api/endpoint)
include_directories(${PROJECT_SOURCE_DIR}/inc/network_api/tcp_connection)
include_directories(${PROJECT_SOURCE_DIR}/inc/process)
include_directories(${PROJECT_SOURCE_DIR}/inc/process/daemon_process)
include_directories(${PROJECT_SOURCE_DIR}/inc/process/master_process)
include_directories(${PROJECT_SOURCE_DIR}/inc/process/worker_process)
include_directories(${PROJECT_SOURCE_DIR}/inc/raii_thread)
include_directories(${PROJECT_SOURCE_DIR}/inc/selector)
include_directories(${PROJECT_SOURCE_DIR}/inc/tcp_server)
include_directories(${PROJECT_SOURCE_DIR}/inc/tcp_server/tcp_server_async)
include_directories(${PROJECT_SOURCE_DIR}/inc/tcp_server/tcp_server_sync)
include_directories(${PROJECT_SOURCE_DIR}/inc/thread)
include_directories(${PROJECT_SOURCE_DIR}/inc/thread/master_thread)
include_directories(${PROJECT_SOURCE_DIR}/inc/thread/worker_thread)
include_directories(${PROJECT_SOURCE_DIR}/inc/threadsafe_queue)
include_directories(${PROJECT_SOURCE_DIR}/inc/transport)
include_directories(${PROJECT_SOURCE_DIR}/python_lib/inc/lib)

add_library(main_o OBJECT main.cpp)

add_subdirectory(common)
add_subdirectory(config)
add_subdirectory(daemon)
add_subdirectory(events)
add_subdirectory(logs)
add_subdirectory(modem_conf)
add_subdirectory(network_api)
add_subdirectory(process)
add_subdirectory(raii_thread)
add_subdirectory(selector)
add_subdirectory(tcp_server)
add_subdirectory(thread)
add_subdirectory(transport)
